--- a/Depo/Depo/Presentation/UserStories/Others/TBMatikPhotosViewController/TBMatikPhotosViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/TBMatikPhotosViewController/TBMatikPhotosViewController.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TBMatikPhotosViewController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TBMatikPhotosViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="backgroundImageView" destination="zlC-hj-dcw" id="kbR-3L-iD4"/>
                 <outlet property="carousel" destination="bIe-nx-Ucd" id="Ohx-x6-CzP"/>
@@ -26,7 +26,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tbmatikBackground" translatesAutoresizingMaskIntoConstraints="NO" id="zlC-hj-dcw">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zlC-hj-dcw">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ugr-WK-tJf">
@@ -38,7 +38,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d8W-rB-aKw">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d8W-rB-aKw">
                     <rect key="frame" x="329" y="44" width="38" height="38"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="38" id="4wT-JY-hkC"/>
@@ -51,13 +51,13 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bIe-nx-Ucd" customClass="iCarousel">
-                    <rect key="frame" x="0.0" y="131" width="375" height="505"/>
+                    <rect key="frame" x="0.0" y="131" width="375" height="514.66666666666663"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
                 <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="yIL-73-ADG">
-                    <rect key="frame" x="168" y="655" width="39" height="37"/>
+                    <rect key="frame" x="127" y="664.66666666666663" width="121.33333333333331" height="27.333333333333371"/>
                 </pageControl>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lge-oI-I7M" customClass="TimelineButton" customModule="lifebox" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lge-oI-I7M" customClass="TimelineButton" customModule="Billo" customModuleProvider="target">
                     <rect key="frame" x="14" y="711" width="169" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="aNt-u3-ErL"/>
@@ -67,7 +67,7 @@
                         <action selector="onSeeTimeline" destination="-1" eventType="touchUpInside" id="BgX-bF-rXM"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZDf-lG-9Th" customClass="RoundedInsetsButton" customModule="lifebox" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZDf-lG-9Th" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
                     <rect key="frame" x="192" y="711" width="169" height="44"/>
                     <state key="normal" title="Share"/>
                     <connections>
@@ -75,9 +75,10 @@
                     </connections>
                 </button>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="zlC-hj-dcw" secondAttribute="trailing" id="26N-Lf-zPg"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="zlC-hj-dcw" secondAttribute="trailing" id="26N-Lf-zPg"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ugr-WK-tJf" secondAttribute="trailing" constant="30" id="2Ky-Xo-N3m"/>
                 <constraint firstItem="ugr-WK-tJf" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="3BT-m2-kl1"/>
                 <constraint firstItem="ZDf-lG-9Th" firstAttribute="top" secondItem="Lge-oI-I7M" secondAttribute="top" id="3ks-ZJ-fmh"/>
@@ -94,18 +95,16 @@
                 <constraint firstItem="Lge-oI-I7M" firstAttribute="height" secondItem="ZDf-lG-9Th" secondAttribute="height" id="TXx-rA-0Mo"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="d8W-rB-aKw" secondAttribute="trailing" constant="8" id="ceW-e3-A8u"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ZDf-lG-9Th" secondAttribute="trailing" constant="14" id="iSl-2O-7P4"/>
-                <constraint firstItem="zlC-hj-dcw" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="kdN-GA-qn7"/>
+                <constraint firstItem="zlC-hj-dcw" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="kdN-GA-qn7"/>
                 <constraint firstItem="bIe-nx-Ucd" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="mWS-ic-uQt"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="bIe-nx-Ucd" secondAttribute="trailing" id="pni-yx-t4D"/>
                 <constraint firstItem="d8W-rB-aKw" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="y6I-sw-jQk"/>
                 <constraint firstItem="yIL-73-ADG" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="yQ7-6p-jcB"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="138" y="140"/>
         </view>
     </objects>
     <resources>
         <image name="closeButton" width="17.666666030883789" height="17.666666030883789"/>
-        <image name="tbmatikBackground" width="750" height="1334"/>
     </resources>
 </document>
